# mini-jolt

./: .gitignore  README.md  curve.py  dory.py  field.py  ids_generated.py  jolt_preprocessing.py  jolt_proof.py  jolt_verifier.py  lookup_tables.py  openings.py  polynomials.py  r1cs.py  ram_io.py  sumchecks.py  transcript.py  zkvm_types.py
rv64imac/: __init__.py  bytecode.py  constants.py  decode.py  elf.py  extensions.py  inline_sequences.py  isa.py  program.py  rvc.py  types.py
scripts/: README.md  gen_ids_generated.py
stages/: __init__.py  stage1.py  stage2.py  stage3.py  stage4.py  stage5.py  stage6.py  stage7.py
tests/: e2e_artifacts.py  oracle.py  rust_device_deserialize.py  test_curve.py  test_curve_cross_lang.py  test_dory_verify_cross_lang.py  test_e2e_verify_from_rust.py  test_field.py  test_field_cross_lang.py  test_lookup_tables_cross_lang.py  test_polynomial.py  test_preprocessing.py  test_rv64imac_inline_sequences.py  test_rv64imac_profile.py  test_spartan_outer_stage1_cross_lang.py  test_stage2_sumchecks_cross_lang.py  test_stage3_sumchecks_cross_lang.py  test_stage4_sumchecks_cross_lang.py  test_stage5_sumchecks_cross_lang.py  test_stage6_sumchecks_cross_lang.py  test_stage7_sumchecks_cross_lang.py  test_sumcheck.py  test_sumcheck_cross_lang.py  test_transcript.py  test_transcript_cross_lang.py
tests/rust_oracle/: Cargo.toml
tests/rust_oracle/src/: basic_oracles.rs  dory_oracle.rs  e2e_helpers.rs  e2e_verify.rs  field_csv.rs  hex_utils.rs  main.rs  poly_mle.rs  stage1.rs  stage2.rs  stage3.rs  stage4_7.rs  sumcheck.rs  transcript.rs
