[package]
name = "field_oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout", default-features = false, features = ["curve", "scalar_field"] }
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout", default-features = false }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout", default-features = false }
blake2 = "0.10.6"
dory-pcs = { version = "0.2.0", default-features = false, features = ["arkworks"] }
rand_chacha = "0.3.1"
rand_core = "0.6.4"
num-bigint = "0.4.6"
num-traits = "0.2.19"
jolt-core = { git = "https://github.com/a16z/jolt", rev = "0156f77158caf9dd1c5925e013464a58b58ef292", default-features = false, features = ["minimal"] }
common = { git = "https://github.com/a16z/jolt", rev = "0156f77158caf9dd1c5925e013464a58b58ef292", default-features = false, features = ["std"] }
clap = { version = "4.5.31", features = ["derive"] }
postcard = { version = "1.1.3", features = ["use-std"] }
jolt-inlines-sha2 = { git = "https://github.com/a16z/jolt", rev = "0156f77158caf9dd1c5925e013464a58b58ef292", optional = true, features = ["host"] }
jolt-inlines-keccak256 = { git = "https://github.com/a16z/jolt", rev = "0156f77158caf9dd1c5925e013464a58b58ef292", optional = true, features = ["host"] }

[features]
default = []
e2e = ["jolt-core/host", "dep:jolt-inlines-sha2", "dep:jolt-inlines-keccak256"]

[patch.crates-io]
ark-bn254 = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
allocative = { git = "https://github.com/facebookexperimental/allocative", rev = "85b773d85d526d068ce94724ff7a7b81203fc95e" }

[workspace]
